# parquet_csv

./: LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
parquet_csv/: parquet_to_csv.py
